--- a/style/style.css
+++ b/style/style.css
@@ -15,13 +15,14 @@ body {
 body {
   scroll-behavior: auto;
 }
-body {
+main {
   opacity: 0;
-  transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
+  visibility: hidden;
+  transition: opacity 1s ease-in-out;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -ms-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
 }
 :root {
   --page-color: #0c0c0c;
@@ -2059,7 +2060,7 @@ footer .back-to-top.show {
   font-size: clamp(2.8rem, 7vw, 5.5rem);
   letter-spacing: 2px;
   font-weight: 400;
-  line-height: 0.9;
+  line-height: 1.2;
 
   & span {
     color: var(--main-color);
