--- a/style/media.css
+++ b/style/media.css
@@ -634,9 +634,28 @@
   }
   .header-texture img {
     position: absolute;
-    top: 0px;
+    top: -60px;
+    width: 80%;
   }
-  .service-texture{
+  .service-texture {
     right: 0%;
   }
+  .hero-img img {
+    width: 505px;
+  }
+  .hero-img::after {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    top: 49%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    width: 443px;
+    height: 400px;
+  }
 }
+
