--- a/style/media.css
+++ b/style/media.css
@@ -66,6 +66,9 @@
   }
 }
 @media screen and (max-width: 1010px) {
+  .hero-btn {
+    justify-content: center;
+  }
   .section-hero {
     overflow: auto !important;
   }
@@ -335,13 +338,6 @@
   .hero-text p {
     text-align: center;
   }
-  .hero-btn {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: start;
-  }
   .motto-flex-box {
     width: 100%;
   }
@@ -511,6 +507,15 @@
   }
 }
 
+@media screen and (max-width: 432px) {
+  .hero-btn {
+    flex-direction: column !important;
+    justify-content: center;
+  }
+  .footer-btn {
+    flex-direction: column;
+  }
+}
 @media screen and (max-width: 426px) {
   .project-grid-box-mob .build-tools ul {
     padding: 0;
@@ -628,5 +633,33 @@
   .section-project .project-grid-box .project-image {
     width: 100%;
     height: 70%;
+  }
+  .header-texture {
+    height: 600px;
+  }
+  .header-texture img {
+    position: absolute;
+    top: -60px;
+    width: 80%;
+  }
+  .service-texture {
+    right: 0%;
+  }
+  .hero-img img {
+    width: 505px;
+  }
+  .hero-img::after {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    top: 49%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    width: 443px;
+    height: 400px;
   }
 }
