--- a/style/style.css
+++ b/style/style.css
@@ -15,13 +15,14 @@ body {
 body {
   scroll-behavior: auto;
 }
-body {
+main {
   opacity: 0;
-  transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
+  visibility: hidden;
+  transition: opacity 1s ease-in-out;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -ms-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
 }
 :root {
   --page-color: #0c0c0c;
@@ -900,11 +901,14 @@ nav.mob-nav ul li a::after {
   height: auto;
   position: relative;
   z-index: 4;
-  background-color: transparent;
+  background-color: var(--page-color);
 }
 .section-skill .container {
   position: relative;
   z-index: 3;
+}
+.resume-btn {
+  margin-top: max(2rem, 5vw);
 }
 .texture-2 {
   width: 100%;
@@ -917,7 +921,7 @@ nav.mob-nav ul li a::after {
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  z-index: 2;
+  z-index: -1;
 }
 .skill-grid-box {
   width: 100%;
@@ -2033,7 +2037,7 @@ footer .back-to-top:hover > i {
   color: var(--page-color);
 }
 footer .back-to-top.show {
-  bottom: 60px;
+  bottom: 30px;
   opacity: 1;
   visibility: visible;
 }
@@ -2059,7 +2063,7 @@ footer .back-to-top.show {
   font-size: clamp(2.8rem, 7vw, 5.5rem);
   letter-spacing: 2px;
   font-weight: 400;
-  line-height: 0.9;
+  line-height: 1.2;
 
   & span {
     color: var(--main-color);
@@ -2269,7 +2273,11 @@ footer .back-to-top.show {
   -ms-transition: all 0.3s linear;
   -o-transition: all 0.3s linear;
 }
-.pagination-tab.pagination-tab-active {
+#project-uiux .pagination-tab.pagination-tab-active {
+  background-color: var(--main-color);
+  color: var(--page-color);
+}
+#project-frontend .pagination-tab.fePagination-tab-active {
   background-color: var(--main-color);
   color: var(--page-color);
 }
@@ -2349,3 +2357,124 @@ footer .back-to-top.show {
 }
 
 /***** End project modal *****/
+
+/***** tank-you page *****/
+
+/* Center content vertically */
+.full-height {
+  min-height: 100dvh;
+}
+
+/* Create a card that matches your site's aesthetic */
+.thank-you-card {
+  background-color: rgba(44, 44, 44, 0.3);
+  border-radius: 1rem;
+  opacity: 0;
+  backdrop-filter: blur(10px);
+  animation: fadeInUp 0.7s ease-out 0.2s forwards;
+  -webkit-animation: fadeInUp 0.7s ease-out 0.2s forwards;
+}
+/* Add animation keyframes */
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.btn-custom {
+  background-color: #00bc91;
+  border-color: #00bc91;
+  color: #191919;
+  /* Dark text on button */
+  font-weight: bold;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
+  /* 8px */
+  transition: all 0.3s ease;
+}
+
+.btn-custom:hover {
+  background-color: #00a07c;
+  border-color: #00a07c;
+  color: #191919;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 15px rgba(0, 188, 145, 0.15);
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+/* Class to apply the fade-out animation to the body */
+.page-fade-out {
+  animation: fadeOut 0.5s linear forwards;
+}
+.th-texture {
+  width: 300px;
+  height: 300px;
+  aspect-ratio: 1;
+  background-color: #00a07c;
+  bottom: 10%;
+  right: 20%;
+  z-index: -1;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  filter: blur(120px);
+  animation: t-fade 2s linear infinite alternate-reverse;
+  -webkit-animation: t-fade 2s linear infinite alternate-reverse;
+  animation-delay: 1s;
+  -webkit-filter: blur(120px);
+}
+@keyframes t-fade {
+  0% {
+    filter: blur(120px);
+    -webkit-filter: blur(120px);
+  }
+  100% {
+    filter: blur(140px);
+    -webkit-filter: blur(140px);
+  }
+}
+.th-texture-2 {
+  width: 100px;
+  height: 100px;
+  aspect-ratio: 1;
+  background-color: #00a07c;
+  bottom: 80%;
+  right: 80%;
+  z-index: -1;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  filter: blur(70px);
+  -webkit-filter: blur(70px);
+  animation: t-fad 2s linear infinite alternate-reverse;
+  -webkit-animation: t-fad 2s linear infinite alternate-reverse;
+}
+@keyframes t-fad {
+  0% {
+    filter: blur(70px);
+    -webkit-filter: blur(70px);
+  }
+  100% {
+    filter: blur(90px);
+    -webkit-filter: blur(90px);
+  }
+}
+/***** End tank-you page *****/
