--- a/style/media.css
+++ b/style/media.css
@@ -662,10 +662,11 @@
     width: 443px;
     height: 400px;
   }
-  .modal-content .modal-content-grid-box .project-video-box video{
-    width: auto;
-    height: 613px;
+  .modal-content {
+    width: 1200px;
+  }
+  .modal-content .modal-content-grid-box .project-video-box video {
+    width: 100%;
+    height: 661px;
   }
 }
-
-
