--- a/style/style.css
+++ b/style/style.css
@@ -2309,7 +2309,7 @@ footer .back-to-top.show {
 }
 
 .modal-content {
-  width: auto;
+  width: 800px;
   height: auto;
   background-color: var(--page-color);
   border: 1px solid var(--main-color);
@@ -2322,7 +2322,6 @@ footer .back-to-top.show {
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
 .modal-content .modal-content-grid-box {
-  width: 100%;
   display: grid;
   grid-template-rows: auto;
   height: auto;
@@ -2340,7 +2339,7 @@ footer .back-to-top.show {
   background-color: #000;
 
   & video {
-    width: auto;
+    width: 100%;
     height: 431px;
     object-fit: contain;
     border-radius: 6px;
@@ -2482,5 +2481,3 @@ footer .back-to-top.show {
   }
 }
 /***** End tank-you page *****/
-
-
